start with native image